--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 <body>
 
   <div class="summary-main">
-
-    Order Summary
+    <h1 class="summary-title">
+      Order Summary
+    </h1>
     
     You can now listen to millions of songs, audiobooks, and podcasts on any 
     device anywhere you like!
