--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     <h1 class="summary-title">
       Order Summary
     </h1>
-    
-    You can now listen to millions of songs, audiobooks, and podcasts on any 
-    device anywhere you like!
+    <div class="summary-description">
+      You can now listen to millions of songs, audiobooks, and podcasts on any 
+      device anywhere you like!
+    </div>
     
     Annual Plan
     $59.99/year
