added more structure to <div> summary-plan

--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@
       device anywhere you like!
     </div>
     <div class="summary-plan">
-      Annual Plan
-      $59.99/year
-      Change
+      <div class="plan-details">
+        <div class="plan-title">
+          Annual Plan
+        </div>
+        <div class="plan-price">
+          $59.99/year
+        </div>
+      </div>
+      <a class="plan-change" href="">
+        Change
+      </a>
     </div>
     
     Proceed to Payment
