added structure to proceed-to-pay-cancel links

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
         Change
       </a>
     </div>
-    
-    Proceed to Payment
-    Cancel Order
+    <div>
+      <a class="pay-btn" href="">Proceed to Payment</a>
+    </div>
+    <div>
+      <a class="cancel-link" href="">Cancel Order</a>
+    </div>
   </div>
     
   <div class="attribution">
