--- a/index.html
+++ b/index.html
@@ -18,31 +18,34 @@
 <body>
 
   <div class="summary-main">
-    <h1 class="summary-title">
-      Order Summary
-    </h1>
-    <div class="summary-description">
-      You can now listen to millions of songs, audiobooks, and podcasts on any 
-      device anywhere you like!
-    </div>
-    <div class="summary-plan">
-      <div class="plan-details">
-        <div class="plan-title">
-          Annual Plan
-        </div>
-        <div class="plan-price">
-          $59.99/year
-        </div>
+    <img class="hero-img" src="images/illustration-hero.svg" alt="illustration-hero">
+    <div class="summary-text">
+      <h1 class="summary-title">
+        Order Summary
+      </h1>
+      <div class="summary-description">
+        You can now listen to millions of songs, audiobooks, and podcasts on any 
+        device anywhere you like!
       </div>
-      <a class="plan-change" href="">
-        Change
-      </a>
-    </div>
-    <div>
-      <a class="pay-btn" href="">Proceed to Payment</a>
-    </div>
-    <div>
-      <a class="cancel-link" href="">Cancel Order</a>
+      <div class="summary-plan">
+        <div class="plan-details">
+          <div class="plan-title">
+            Annual Plan
+          </div>
+          <div class="plan-price">
+            $59.99/year
+          </div>
+        </div>
+        <a class="plan-change" href="">
+          Change
+        </a>
+      </div>
+      <div>
+        <a class="pay-btn" href="">Proceed to Payment</a>
+      </div>
+      <div>
+        <a class="cancel-link" href="">Cancel Order</a>
+      </div>
     </div>
   </div>
     
