added music icon

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         device anywhere you like!
       </div>
       <div class="summary-plan">
+        <img class="music-img" src="images/icon-music.svg" alt="music-img">
         <div class="plan-details">
           <div class="plan-title">
             Annual Plan
