grouped payment-links <div>

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
           Change
         </a>
       </div>
-      <div>
-        <a class="pay-btn" href="">Proceed to Payment</a>
-      </div>
-      <div>
-        <a class="cancel-link" href="">Cancel Order</a>
+      <div class="payment-links">
+        <div>
+          <a class="pay-btn" href="">Proceed to Payment</a>
+        </div>
+        <div>
+          <a class="cancel-link" href="">Cancel Order</a>
+        </div>
       </div>
     </div>
   </div>
