corrected plan-change

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             $59.99/year
           </div>
         </div>
-        <a class="plan-change" href="">
-          Change
-        </a>
+        <div class="plan-change">
+          <a class="change-link" href="">Change</a>
+        </div>
       </div>
       <div class="payment-links">
         <div>
